WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
101182
[EFL][WK2] The icon database path should be set by the client
https://bugs.webkit.org/show_bug.cgi?id=101182
Summary
[EFL][WK2] The icon database path should be set by the client
Chris Dumez
Reported
2012-11-04 22:49:31 PST
We currently experience crashes in WebKitTestRunner because the icon database path can only be set once. The WebKitTestRunner is now setting the icon database path (
Bug 100678
) and we set it a second time in ewk_context. We should stop setting the path in ewk_context and let the client take care of it to avoid this issue.
Attachments
Patch
(14.93 KB, patch)
2012-11-04 23:38 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(14.89 KB, patch)
2012-11-05 00:20 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2012-11-04 23:38:32 PST
Created
attachment 172276
[details]
Patch
Gyuyoung Kim
Comment 2
2012-11-04 23:52:24 PST
Comment on
attachment 172276
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=172276&action=review
> Source/WebKit2/UIProcess/API/efl/ewk_favicon_database.cpp:43 > + : m_iconDatabase(iconDatabase)
Nit : two spaces ?
> Tools/ChangeLog:3 > + 101182_iconDatabase_path
What is this ?
> Tools/ChangeLog:10 > + Additional information of the change such as approach, rationale. Please add per-function descriptions below (OOPS!).
Add patch description
Chris Dumez
Comment 3
2012-11-05 00:20:11 PST
Created
attachment 172280
[details]
Patch Take Gyuyoung's feedback into consideration. I completely missed to update one changelog entry after generating it. Thanks for catching it.
WebKit Review Bot
Comment 4
2012-11-05 00:56:04 PST
Comment on
attachment 172280
[details]
Patch Clearing flags on attachment: 172280 Committed
r133442
: <
http://trac.webkit.org/changeset/133442
>
WebKit Review Bot
Comment 5
2012-11-05 00:56:09 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug